# cmake-sandbox

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
src/: CMakeLists.txt  helloworld.cpp
src/timer/: CMakeLists.txt  timer.cpp
